Add readiness checks, and init containers

--- a/boulder/2.boulder-mysql.deployment.yml
+++ b/boulder/2.boulder-mysql.deployment.yml
@@ -27,3 +27,10 @@ spec:
         ports:
         - name: tcp
           containerPort: 3306
+        readinessProbe:
+          exec:
+            # Check we can execute queries over TCP (skip-networking is off).
+            command: ["mysql", "-h", "127.0.0.1", "-e", "SELECT 1"]
+          initialDelaySeconds: 5
+          periodSeconds: 2
+          timeoutSeconds: 1
