--- a/boulder/6.boulder.deployment.yml
+++ b/boulder/6.boulder.deployment.yml
@@ -48,7 +48,7 @@ spec:
           args: ["pod", "-lname=boulder-hsm"]      
       containers:
       - name: boulder
-        image: dtomcej/boulder:meetup2018-newcerts
+        image: dtomcej/boulder:meetup2018-certsadded
         env:
         - name: FAKE_DNS
           value: 10.110.110.110
