--- a/whoami/3.deployment.yml
+++ b/whoami/3.deployment.yml
@@ -1,17 +1,17 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: nginx
-  namespace: nginx
+  name: whoami
+  namespace: whoami
 spec:
   selector:
     matchLabels:
-      app: nginx
+      app: whoami
   replicas: 2
   template:
     metadata:
       labels:
-        app: nginx
+        app: whoami
     spec:
       initContainers:
         - name: generate-certs
@@ -26,11 +26,12 @@ spec:
           - name: certs
             mountPath: /ssl
       containers:
-      - name: nginx
-        image: nginx:1.15.2
+      - name: whoami
+        image: dtomcej/whoami:tls
+        args: ["-cert=/ssl/cert.pem", "-key=/ssl/key.pem", "-port=443"]
         ports:
-        - containerPort: 80
-          name: http
+        - containerPort: 443
+          name: https
         volumeMounts:
         - name: certs
           mountPath: /ssl
